Make design Mobile responsive Mobile L -425 px also fix horizontal bar issue on mobile screen

--- a/styles/media_quary.css
+++ b/styles/media_quary.css
@@ -3,8 +3,19 @@
 /* Media query for screens up to 425px */
 @media screen and (max-width: 425px) {
 
+    /* Container */
     .container {
         width: 90vw;
+        margin: 0 auto;
+        /* Center the container horizontally */
+        padding: 0 1rem;
+        /* Add some padding on the sides */
+    }
+
+    /* Nav Section */
+
+    .nav_logo {
+        padding-top: 1rem;
     }
 
     .primary_btn {
@@ -17,7 +28,7 @@
 
     .nav {
         width: 100%;
-        height: 25rem;
+        min-height: 30rem;
     }
 
     .nav_container {
@@ -38,10 +49,18 @@
         margin: 2rem 0rem;
     }
 
+    /* Banner Section */
+
+    .banner {
+        background-image: none;
+        background-size: cover;
+        padding-bottom: 2rem;
+    }
 
     .banner_container {
         flex-direction: column-reverse;
         padding-top: 2rem;
+        gap: 2rem;
     }
 
     .banner_content {
@@ -68,6 +87,12 @@
         font-size: 7rem;
     }
 
+    /* Gamer Section */
+
+    .gamer_section {
+        background-image: none;
+    }
+
     .gamer_container {
         flex-direction: column;
     }
@@ -86,6 +111,11 @@
         padding-right: 2rem;
     }
 
+    .online_game_card_p {
+        text-align: center;
+    }
+
+    /* Play Section */
 
     .play_container {
         flex-direction: column;
@@ -103,20 +133,27 @@
     }
 
     .play_img>img {
-        width: 100%;
+        width: 80%;
     }
 
     .play_img {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         width: 100%;
         padding-left: 0rem;
     }
 
+    .play_img .play_img_absolute {
+        width: 40%;
+        top: 60%;
+        left: 0%;
+    }
+
+    /* Another Play */
+
     .play_container_two {
         flex-direction: column;
-        align-items: center;
-        justify-content: space-between;
-        padding: 8rem 0rem;
-        width: 100%;
     }
 
     .play_content_two {
@@ -124,7 +161,88 @@
         text-align: center;
     }
 
-    .play_img_absolute_two {
-        position: static;
+    .play_img .play_img_absolute_two {
+        width: 40%;
+        top: 60%;
+        left: 60%;
+    }
+
+    /* Career */
+    .career {
+
+        padding: 5rem 0rem;
+
+    }
+
+    .careers_container {
+        flex-direction: column;
+
+    }
+
+    .career_content {
+        width: 100%;
+        margin-bottom: 2rem;
+    }
+
+    .career_img {
+        width: 100%;
+    }
+
+    .career_img>img {
+        width: 100%;
+    }
+
+    .career_description {
+        width: 100%;
+        font-size: 1.5rem;
+    }
+
+    .career_item {
+        font-size: 1.2rem;
+        font-weight: 600;
+        line-height: 4rem;
+    }
+
+    .career_btn {
+        border-radius: 48px;
+        padding: 1.5rem 2rem;
+    }
+
+
+    /* Footer */
+    .site_name {
+        font-size: 3rem;
+    }
+
+    .site_text_links {
+        justify-content: center;
+        gap: 3rem;
+    }
+
+    .site_link {
+        font-size: 1.5rem;
+    }
+
+    .site_social_links {
+        width: 75%;
+        justify-content: center;
+    }
+
+
+    .site_copyright {
+        align-items: center;
+    }
+
+    .site_copyright_links {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 3rem;
+        justify-content: center;
+    }
+
+    .copyright_text {
+        width: 60%;
+        font-size: 1.4rem;
+        text-align: center;
     }
 }
